fix spacing:

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -21,5 +21,5 @@
   font-family: 'Helvetica', sans-serif;
   color: #F64F5F;
   margin-bottom: 0;
-  display: inline;
+  display: inline-block;
 }
